data/all_generated_tests/raw_wast_tests/br_InvalidorInconsistentControlFlowGraph_828.wast
;; 9. **Test for Backward Branch to Loop Start:**    - **Description**: Backward branching to the start of a `loop` but with incorrectly aligned operand types.    - **Constraint Checked**: Operand type conformity for loop backward branches.    - **Relation to CFG**: Ensures backward branches to loops correctly handle operand types within CFG.

(assert_invalid
  (module
    (func (param i32 f32) 
      (block
        (loop (param i32) 
          (br 1 (local.get 1))
        )
      )
    )
  )
  "type mismatch"
)